macviews: wire account chooser dialogs

This change wires the auto signin prompt and the account chooser prompt.

Bug: 728129
Change-Id: Ibdf76a20642ec8e8734bf733facb9aec4dc69146
Reviewed-on: https://chromium-review.googlesource.com/905163
Reviewed-by: Trent Apted <tapted@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#534995}
Former-commit-id: 5f99c89339afca8d4358f528bbc7117cafb051d5